--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -1684,7 +1684,7 @@ CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
 #
 CONFIG_NVME_CORE=y
 CONFIG_BLK_DEV_NVME=y
-# CONFIG_NVME_MULTIPATH is not set
+CONFIG_NVME_MULTIPATH=y
 # CONFIG_NVME_FC is not set
 # CONFIG_NVME_TARGET is not set
 
